--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ p {
 
 .l-heading {
   font-size: 40px;
+  line-height: 1.2em;
 }
 
 /* Padding */
@@ -112,7 +113,7 @@ p {
   color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -163,7 +164,7 @@ p {
 /* Home Info */
 
 #home-info {
-  height: 400px;
+  height: 550px;
 }
 
 #home-info .info-img {
@@ -204,7 +205,7 @@ p {
 #about-info .info-right {
   float: right;
   width: 50%;
-  min-width: h 100%;
+  min-height: 100%;
 }
 
 #about-info .info-right img {
@@ -223,7 +224,7 @@ p {
 /* Testimonials */
 
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url('../img/test-bg.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
